# grading_assistant

./: .gitignore  Getting Started.ipynb  LICENSE  Prepare_for_hosting.ipynb  README.md  db.sqlite3  grading_assistant.toml  manage.py  prepare_static_for_hosting.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Getting Started-checkpoint.ipynb
backend/: .gitignore  admin.py  manage.py  models.py  readme.md  schemas.py  urls.py  utils.py  views.py
backend/api/: urls.py  views.py
backend/frontend/: urls.py
backend/grader_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/migrations/: 0001_initial.py  0002_alter_gradingrubric_level.py
external_data/: AP World History Project.md  grading_rubric_table.csv  poem_test.txt
frontend/: package-lock.json  package.json  readme.md  webpack.config.js
frontend/public/: bundle.js  index.html
grader_frontend/: package-lock.json  package.json  tailwind.config.js
grading_assistant/: asgi.py  settings.py  urls.py  wsgi.py
grading_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rubric_markdown_test/: rubric_doc_to_md_test.ipynb  us_history_rubric_test.md
rubrics/: 10th_Grade_Literature 2.md  10th_Grade_Literature.md  11th_Grade_US_History.md  11th_and_12th_Grades_Creative_Writing 2.md  11th_and_12th_Grades_Creative_Writing.md  9th_Grade_Global_History.md  AP_World_History_Project.md  Creative_Writing_2_-_Poetry.md  High_School_Lab_Report 2.md  High_School_Lab_Report.md  Historia_Siglo_XX_-_Proyecto.md  Social_Science_Master_Thesis.md
static/: asset-manifest.json  index.html  manifest.json
(+113 files in other folders)
